<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFF"
    tools:context=".controller.ListeActivity"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="right">

                <ImageButton
                    android:id="@+id/btShoppingBasket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"

                    android:src="@drawable/ic_shopping_basket_black_24dp"></ImageButton>

                <ImageButton
                    android:id="@+id/btReload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/btShoppingBasket"

                    android:src="@drawable/ic_reload_black_24dp"></ImageButton>

                <ImageButton
                    android:id="@+id/btPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/btBrowsing"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_plus_symbol"></ImageButton>

                <ImageButton
                    android:id="@+id/btBrowsing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_find_replace_black_24dp"
                    android:layout_alignParentRight="true">

                </ImageButton>

            </LinearLayout>

            <TextView
                android:id="@+id/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="login"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/listMode"
        android:layout_gravity="right"
        android:layout_below="@+id/appBar">
        <Button
            android:id="@+id/btModeProduct"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/product_list"
            android:layout_weight="0.5"
            >

        </Button>

        <Button
            android:id="@+id/btModeEmployee"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/subject_list"

            android:layout_weight="0.5">

        </Button>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listMode"/>

</RelativeLayout>


