<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFF"
    tools:context=".controller.FirstConnexionActivity">

<TextView android:text = "Validate"
    android:layout_width="wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/textview"
    android:textSize = "35dp"
    android:layout_alignParentTop = "true"
    android:layout_centerHorizontal = "true" />


<EditText
    android:layout_width = "wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/password"
    android:hint = "Password 1 "
    android:focusable = "true"
    android:textColorHighlight = "#ff7eff15"
    android:textColorHint = "#ffff25e6"
    android:layout_marginTop = "46dp"
    android:layout_below = "@+id/textview"
    android:layout_alignParentLeft = "true"
    android:layout_alignParentStart = "true"
    android:layout_alignParentRight = "true"
    android:layout_alignParentEnd = "true" />


<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:ems="10"
    android:id="@+id/password2"
    android:layout_below="@+id/password"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignRight="@+id/login"
    android:layout_alignEnd="@+id/login"
    android:textColorHint="#ffff299f"
    android:hint="Password 2 " />


<ImageButton
    android:id="@+id/btnSubmit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/password2"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="-51dp"
    android:src="@drawable/ic_validation_arrow_24dp"/>


</RelativeLayout>