...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/txtNomRayon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>
    </LinearLayout>

...
